# lab1-template

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: classroom.yml
ci/: pull_and_update.sh
person-service/: build.gradle.kts  settings.gradle.kts
person-service/src/main/java/ru/uncledrema/personservice/: PersonServiceApplication.java
person-service/src/main/java/ru/uncledrema/personservice/domain/entities/: PersonEntity.java
person-service/src/main/java/ru/uncledrema/personservice/domain/repositories/: PersonRepository.java
person-service/src/main/java/ru/uncledrema/personservice/domain/services/: PersonService.java
person-service/src/main/java/ru/uncledrema/personservice/domain/services/impl/: PersonServiceImpl.java
person-service/src/main/java/ru/uncledrema/personservice/web/controllers/: PersonController.java
person-service/src/main/java/ru/uncledrema/personservice/web/dto/: PersonRequest.java  PersonResponse.java
person-service/src/main/java/ru/uncledrema/personservice/web/mapper/: WebMapper.java
person-service/src/main/java/ru/uncledrema/personservice/web/mapper/impl/: WebMapperImpl.java
person-service/src/main/resources/: application.yml
person-service/src/test/java/ru/uncledrema/personservice/: PersonServiceApplicationTests.java
postgres/: 10-create-user-and-db.sql  20-create-person-table.sql
postman/: [inst][heroku] Lab1.postman_environment.json  [inst][local] Lab1.postman_environment.json
src/: main.rs
(+1 files in other folders)
