[package]
name = "lab1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tokio"] }
dotenv = "0.15.0"
serde = { version = "1.0.221", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "uuid", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
